@@ -1,3 +1,9 @@
+2006-12-05  Yvan Vanhullebus  <vanhu@netasq.com>
+	* src/racoon/proposal.[ch]: Check keys length regarding
+	  pcheck_level in cmpsatrns().
+	* src/racoon/racoon.conf.5: updated man page about what is
+	  impacted by proposal_check level.
+
 2006-11-12  Matthew Grooms <mgrooms@shrew.net>
 	* src/racoon/sainfo.c: fix anonymous sainfo selection.
 
